--- a/Frontend/src/shared/components/Navigation/NavLinks/NavLinks.css
+++ b/Frontend/src/shared/components/Navigation/NavLinks/NavLinks.css
@@ -24,6 +24,7 @@
   .nav-links a:hover,
   .nav-links a:active,
   .nav-links a.active {
+    border-radius: 5px;
     background: #f8df00;
     border-color: #292929;
     color: #292929;
